portfolio page updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="manifest" href="assets/favicon_io/site.webmanifest">
 
 
-    <!-- Style sheet -->
+    <!-- Style sheet css custom -->
     <link rel="stylesheet" href="./assets/main.css">
 
 </head>
@@ -55,7 +55,7 @@
                     <div class="collapse navbar-collapse " id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item mx-2">
-                                <!--Home page link. Using a span class to reflect active page which is linked to the active class-->
+                                <!--Landing page link. Using a span class to reflect active page which is linked to the active class-->
                                 <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <!--portfolio link-->
