--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,29 +4,29 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>It's REZA </title>
+        <title>Portfolio </title>
 
-        <!-- Bootstrap CDN -->
+        <!-- Bootstrap CDN css -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
         </script>
 
-        <!-- Google fonts -->
+        <!-- Google fonts linked -->
         <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji+2:400,700&display=swap" rel="stylesheet">
 
-        <!-- font awesome -->
+        <!-- font awesome script-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
             integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
 
-        <!-- Favicon -->
+        <!-- Favicon for the webpages -->
         <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png">
         <link rel="manifest" href="../assets/favicon_io/site.webmanifest">
 
-        <!-- Style sheet -->
+        <!-- Style sheet css custom -->
         <link rel="stylesheet" href="../assets/main.css">
 
     </head>
@@ -48,18 +48,23 @@
                             <span> </span>
 
                         </button>
+                        <!--NAVBAR OPTIONS-->
                         <div class="collapse navbar-collapse " id="navbarNav">
                             <ul class="navbar-nav ml-auto">
+                                <!--landing page link-->
                                 <li class="nav-item mx-2">
                                     <a class="nav-link " href="../index.html">Home </a>
                                 </li>
+                                <!--portfolio page link. Using the span class to display the active page using the class active-->
                                 <li class="nav-item mx-2 ">
                                     <a class="nav-link active" href="#">Portfolio <span
                                             class="sr-only">(current)</span></a>
                                 </li>
+                                <!--link to the cv page-->
                                 <li class="nav-item mx-2">
                                     <a class="nav-link" href="cv.html">CV</a>
                                 </li>
+                                <!--linked to contact page-->
                                 <li class="nav-item mx-2">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
@@ -71,7 +76,7 @@
         </header>
         <!-- Navigation Bar Ends -->
 
-        <!-- portfolio starts -->
+        <!-- portfolio page starts -->
 
 
         <!-- What i do starts -->
@@ -84,14 +89,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea eos perspiciatis, dolorum quidem
-                            numquam nemo accusamus recusandae excepturi doloribus facilis ad facere corrupti reiciendis
-                            id
-                            minima cupiditate saepe voluptas consequatur! Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Minima, accusamus incidunt a aliquid ipsa iure consectetur illo, eius
-                            eligendi
-                            animi cumque et perferendis ipsum velit vitae harum nemo sequi veritatis? Iste eaque
-                            voluptatibus sit quidem sunt quos delectus voluptas odit? </p>
+                        <p> I plan, create and code internet sites and web pages!
+                            I am also a java programmer, a python developer. Well, I am a learner by heart and just a
+                            beginner.
+                            I am currently working as an web developer. at Pro Arkitects, based in Kent, England.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -104,6 +106,7 @@
         <!-- Projects section starts -->
         <section id="projects">
             <div class="heading">
+                <!--using the  span and name-highight class to highlights the PRO from the projects-->
                 <h2>My <span class="name-highlight">Pro</span>jects </h2>
                 <div class="underline"></div>
             </div>
@@ -111,20 +114,23 @@
                 <div class="row" id="project-1">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-left">
+                            <!--span class to highlight projects descriptions title-->
                             <h2>Pr<span class="name-highlight">oje</span>ct descripti<span
                                     class="name-highlight2">on</span>
                             </h2>
                             <br>
-                            <p class="intro-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione rem
-                                voluptatum unde?
-                                Nesciunt provident expedita voluptatum necessitatibus neque accusantium odio.</p>
-                            <a id="home-btn" class="btn btn-general btn-portfolio mb-4" href="#" title="visit"
-                                role="button">Visit Now</a>
+                            <p class="intro-text">
+                                Well, nothing special just a glimpse from my offcial website though it is not completed
+                                yet 😄
+
+                            </p>
+                            <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
+                                href="https://www.rezaulhreza.co.uk" title="visit" role="button">Visit Now</a>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right">
-                            <img src="../assets/images/project.jpg" alt="Rezaul Haque Reza" class="img-fluid ">
+                            <img src="../assets/images/myweb.png" alt="Rezaul Haque Reza" class="img-fluid ">
                         </div>
                     </div>
                 </div>
@@ -136,16 +142,21 @@
                                     class="name-highlight">n</span>
                             </h2>
                             <br>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione rem
-                                voluptatum unde?
-                                Nesciunt provident expedita voluptatum necessitatibus neque accusantium odio.</p>
-                            <a id="home-btn" class="btn btn-general btn-portfolio mb-4" href="#" title="visit"
-                                role="button">Visit Now</a>
+                            <p>
+                                This is a 404 page which is a modified version of Ottis Canvas Particle Demo. It is
+                                created using JavaScript.
+                                Particles are made by doing some mathematical expression. Colors are changd as well as
+                                the movement of the particles are altered.
+
+                            </p>
+                            <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
+                                href="https://codepen.io/rezaulhreza/pen/MWagZEo" title="visit" role="button">Visit
+                                Now</a>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right intro-text2">
-                            <img src="../assets/images/project.jpg" alt="Rezaul Haque Reza" class="img-fluid">
+                            <img src="../assets/images/404.png" alt="404 page" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -315,44 +326,53 @@
         <!-- portfolio ends -->
 
 
-        <!-- Footer -->
+        <!-- Footer goes here -->
         <footer>
-            <section>
-                <div class="container-fluid portfolio-bg-footer">
-                    <div class="row pt-4">
-                        <div class="col-md-6 d-flex justify-content-center align-items-center ">
-
-                            <div class="row " id="social-section">
-                                <div class="col-md-12">
-                                    <p class="text-center">Get in touch!</p>
-                                </div>
-                                <div class="col-md-12">
-                                    <ul class="social-list">
-                                        <li> <a href="#"> <i class="fab fa-codepen"></i> </a> </li>
-                                        <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
-                                        <li> <a href="#"> <i class="fab fa-google-plus-g"> </i> </a> </li>
-                                        <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
-                                        <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
-                                        <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
-                                    </ul>
-                                </div>
-
+            <div class="container-fluid">
+                <div class="row pt-4 pb-2">
+                    <!--footer- left hand side-->
+                    <div class="col-md-6 d-flex justify-content-center align-items-center ">
+                        <!--links to all social network goes here-->
+                        <div class="row " id="social-section">
+                            <div class="col-md-12">
+                                <p class="text-center">Get in touch!</p>
                             </div>
+                            <div class="col-md-12">
+                                <ul class="social-list">
+                                    <!--codepen link-->
+                                    <li> <a href="https://www.codepen.io/rezaulhreza"> <i class="fab fa-codepen"></i>
+                                        </a>
+                                    </li>
+                                    <!---github link-->
+                                    <li> <a href="https://www.github.com/rezaulhreza"> <i class="fab fa-github"> </i>
+                                        </a>
+                                    </li>
+                                    <!--twitter profile-->
+                                    <li> <a href="https://www.twitter.com/rezaulhreza"> <i class="fab fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <!--LinkedIn profile-->
+                                    <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
+                                                class="fab fa-linkedin-in"></i> </a> </li>
+                                    <!--instagram profile-->
+                                    <li> <a href="instagram.com/rezaulhreza"> <i class="fab fa-instagram"></i></a> </li>
+                                </ul>
+                            </div>
+
                         </div>
-                        <div class="col-md-6 d-flex justify-content-center align-items-center">
-                            <div class="row pb-1" id="copy-right">
-                                <div class="col-md-12">
-                                    <p class="text-center">All right reserved</p>
-                                    <p class="text-center">Rezaul Haque Reza &copy; 2020 </p>
-                                </div>
+                    </div>
+                    <!--footer right hand side-->
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <div class="row" id="copy-right">
+                            <div class="col-md-12">
+                                <p class="text-center">All rights reserved</p>
+                                <p class="text-center">Rezaul Hoque Reza &copy; 2020 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-            </section>
+            </div>
         </footer>
-
 
 
 
