--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -163,7 +163,8 @@
                 class="btn btn-general btn-portfolio mb-4"
                 href="https://www.rezaulhreza.co.uk"
                 title="visit"
-                role="button">Visit Now</a
+                role="button"
+                >Visit Now</a
               >
             </div>
           </div>
@@ -173,7 +174,7 @@
             <div class="home-right">
               <img
                 src="../assets/images/myweb.png"
-                alt="Rezaul Haque Reza"
+                alt="website screenshot"
                 class="img-fluid"
               />
             </div>
@@ -201,7 +202,7 @@
               <a
                 id="home-btn"
                 class="btn btn-general btn-portfolio mb-4"
-                href="https://codepen.io/rezaulhreza/pen/MWagZEo"
+                href="https://codepen.io/rezaulhreza/full/MWagZEo"
                 title="visit"
                 role="button"
                 >Visit Now</a
@@ -241,7 +242,7 @@
               <a
                 id="home-btn"
                 class="btn btn-general btn-portfolio mb-4"
-                href="#"
+                href="https://rezaulhreza.github.io/todolist/"
                 title="visit"
                 role="button"
                 >Visit Now</a
@@ -253,8 +254,8 @@
           >
             <div class="home-right">
               <img
-                src="../assets/images/project.jpg"
-                alt="Rezaul Haque Reza"
+                src="../assets/images/todo.png"
+                alt="todolist"
                 class="img-fluid"
               />
             </div>
@@ -274,14 +275,12 @@
               </h2>
               <br />
               <p class="intro-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Ratione rem voluptatum unde? Nesciunt provident expedita
-                voluptatum necessitatibus neque accusantium odio.
+                Animated login form using JavaScript,
               </p>
               <a
                 id="home-btn"
                 class="btn btn-general btn-portfolio mb-4"
-                href="#"
+                href="https://codepen.io/rezaulhreza/full/mdJQGoN"
                 title="visit"
                 role="button"
                 >Visit Now</a
@@ -293,7 +292,7 @@
           >
             <div class="home-right intro-text">
               <img
-                src="../assets/images/project.jpg"
+                src="../assets/images/loginform.png"
                 alt="Rezaul Haque Reza"
                 class="img-fluid"
               />
