--- a/pages/cv.html
+++ b/pages/cv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>It's REZA </title>
+    <title>CV </title>
 
     <!-- Bootstrap CDN css and js -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -50,15 +50,19 @@
                     </button>
                     <div class="collapse navbar-collapse " id="navbarNav">
                         <ul class="navbar-nav ml-auto">
+                            <!--Landing page link.-->
                             <li class="nav-item mx-2">
                                 <a class="nav-link " href="../index.html">Home </a>
                             </li>
+                            <!--portfolio link-->
                             <li class="nav-item mx-2 ">
                                 <a class="nav-link " href="portfolio.html">Portfolio </a>
                             </li>
+                            <!--Using a span class to reflect active page which is linked to the active class-->
                             <li class="nav-item mx-2">
                                 <a class="nav-link active" href="#">CV <span class="sr-only">(current)</span></a>
                             </li>
+                            <!--contact link-->
                             <li class="nav-item mx-2">
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
