--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -105,11 +105,13 @@
         <!-- Projects section starts -->
         <section id="projects">
             <div class="heading">
+                <!--projects title-->
                 <!--using the  span and name-highight class to highlights the PRO from the projects-->
                 <h2>My <span class="name-highlight">Pro</span>jects</h2>
                 <div class="underline"></div>
             </div>
             <div class="container">
+                <!--First projects-->
                 <div class="row" id="project-1">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-left">
@@ -119,14 +121,19 @@
                                     class="name-highlight2">on</span>
                             </h2>
                             <br />
+                            <!--Description-->
                             <p class="intro-text">
                                 Well, nothing special just a glimpse from my offcial website
                                 though it is not completed yet 😄
                             </p>
+                            <!--website link-->
                             <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
                                 href="https://www.rezaulhreza.co.uk" title="visit" role="button">Visit Now</a>
                         </div>
                     </div>
+                    <!--first project description ends-->
+
+                    <!--first project starts-->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right">
                             <img src="../assets/images/myweb.png" alt="website screenshot" class="img-fluid" />
